--- a/android/build.gradle
+++ b/android/build.gradle
@@ -141,6 +141,6 @@ idea {
         }
     }
     dependencies {
-        implementation 'com.google.android.gms:play-services:6.+'
+        compile 'com.google.android.gms:play-services:6.+'
     }
 }
